plugins {
    id 'java'
    id 'java-library'
}

println("JDK 17")

ext.set('versionOverrided', true)

compileJava {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
    options.compilerArgs.addAll([
            '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
            '--add-exports', 'java.base/jdk.internal.access=ALL-UNNAMED'
    ])
}

dependencies {
    api(project(':impl.jdks:jdk9'))
}

parent.ext.get('setupJdk')(project)
